@@ -2,13 +2,13 @@
   "id": "ac8df738-377a-476a-be01-1706963fc307",
   "name": "AL Translate Tool",
   "publisher": "Theil IT Management",
-  "version": "15.0.0.0",
+  "version": "16.0.0.0",
   "brief": "AL Translate Tool for Dynamics 365 BC on-premise",
-  "description": "Open-Source AL Translate Tool. Source code can be located at https://github.com/peikba/AL-Translate-Tool.",
+  "description": "Open-Source AL Translate Tool. Source code can be located at https://github.com/Theil-IT/AL-Translate-Tool-15.",
   "privacyStatement": "",
   "EULA": "",
   "help": "",
-  "url": "https://github.com/peikba/AL-Translate-Tool",
+  "url": "https://github.com/Theil-IT/AL-Translate-Tool-15",
   "logo": "./Images/Translate.jpg",  "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
